[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.28.0",
    "requests>=2.34.2",
    "python-dotenv>=1.0.0",
    "fastapi>=0.138.0",
    "scalekit-sdk-python>=2.12.0",
    "chromadb>=1.5.9",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.55.1",
    "pymupdf>=1.27.2.3",
]
