[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.28.0",
    "requests>=2.34.2",
    "python-dotenv>=1.0.0",
    "fastapi>=0.138.0",
    "scalekit-sdk-python>=2.12.0",
    "pinecone>=9.1.0",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.15.0",
    "feedparser>=6.0.12",
    "openai>=2.44.0",
    "google-play-scraper>=1.2.7",
    "yt-dlp>=2025.6.9",
]
